--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Google Keep Clone"
+      content="Web site created using create-react-app and tailwind"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,8 +28,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="backdrop-note"></div>
-    <div id="overlay-note"></div>
     <div id="root"></div>
   </body>
 </html>
